wil-playground/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - image: docker.io/wil42/playground:v1
        name: wil-playground
        ports:
        - containerPort: 8888
