wil-playground/ingress.yaml
kind: Ingress
metadata:
 namespace: kube-system
 name: my-ingress-apps 
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: wil-playground 
           port: 
             number: 8888

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wil-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx-example
#   rules:
#   - http:
#       paths:
#       - path: /testpath
#         pathType: Prefix
#         backend:
#           service:
#             name: test
#             port:
#               number: 8888
